# opensearch-learning-to-rank-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example-ltr-rescore.json  example-ltr.json  featureset.json  index.json  pyproject.toml  request.http  save_query.py
train/: active_features.py  log_features.py  query.py  train.py
train/data/: feature_values.csv  queries.csv  training_set.csv
train/model/: model.json  os_model.json
train/scripts/: parse_queries.py
