[tool.poetry]
name = "opensearch-learning-to-rank-example"
version = "0.1.0"
description = ""
authors = ["Adam Quigley <adamjohnquigley@gmail.com>"]
readme = "README.md"
packages = [{include = "train"}]

[tool.poetry.dependencies]
python = "3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
