[tool.poetry]
name = "opensearch-learning-to-rank-example"
version = "0.1.0"
description = ""
authors = ["Adam Quigley <adamjohnquigley@gmail.com>"]
readme = "README.md"
packages = [{include = "train"}]

[tool.poetry.dependencies]
python = "3.12"
requests = "^2.31.0"
numpy = "^2.2.2"
xgboost = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
